--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-circular-progressbar": "^2.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-use": "^17.6.0",
     "sonner": "^2.0.3",
