--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint",
     "db:studio": "npx drizzle-kit studio",
     "db:push": "npx drizzle-kit push",
-    "db:seed": "tsx ./scripts/seed.ts"
+    "db:seed": "tsx ./scripts/seed.ts",
+    "db:reset": "tsx ./scripts/reset.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -26,7 +29,9 @@
     "next": "^15.3.0",
     "next-themes": "^0.4.6",
     "pg": "^8.13.3",
+    "ra-data-simple-rest": "^5.8.0",
     "react": "^19.0.0",
+    "react-admin": "^5.8.0",
     "react-circular-progressbar": "^2.2.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
